# RaychelCore

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  RaychelCoreConfig.cmake
cmake/: find_dependencies.cmake
include/: ArgumentParser.h  AssertingGet.h  AssertingOptional.h  AssertingVector.h  ClassMacros.h  CommandLineHelper.h  CommandLineValueReference.h  Finally.h  Raychel_assert.h  ScopedTimer.h  charconv.h  compat.h
include/RaychelCore/: AssertingOptional.h  Badge.h  CommandLineHelper.h  Finally.h  OctTree.h  Raychel_assert.h  ScopedTimer.h  SmallBuffer.h  charconv.h  compat.h
test/: ArgumentParser.cpp  ArgumentParser.test.cpp  AssertingGet.test.cpp  AssertingOptional.test.cpp  AssertingVector.test.cpp  CMakeLists.txt  CharConv.test.cpp  Finally.test.cpp  OctTree.test.cpp  SmallBuffer.test.cpp  main.test.cpp
